# nao-backpack

./: README.md
backpack_cad/: README.md
backpack_cad/step/: divider.STEP  nao_backpack.STEP  spacer.STEP
backpack_cad/stl/: divider.STL  nao_backpack.STL  spacer.STL
bhuman2ros/: CMakeLists.txt  README.md  package.xml
bhuman2ros/launch/: nao_bringup.launch  simrobot_bringup.launch
bhuman2ros/rviz/: nao.rviz
bhuman2ros/scripts/: hotspot.sh  set_ros_master.sh
bhuman2ros/src/: BHInterface.cpp  BHInterface.h  CognitionComm.cpp  CognitionComm.h  CommBase.cpp  CommBase.h  MotionComm.cpp  MotionComm.h  main_node.cpp
bhuman2ros/src/Platform/: BHAssert.h  File.cpp  SystemCall.h
bhuman2ros/src/Representations/Infrastructure/: Image.h  JointAngles.cpp  JointAngles.h
bhuman2ros/src/Representations/MotionControl/: HeadMotionRequest.h  MotionRequest.h  MoveToTarget.cpp  MoveToTarget.h  SpecialActionRequest.h  WalkRequest.h
bhuman2ros/src/Tools/: Global.h
bhuman2ros/src/Tools/Debugging/: Debugging.h  Stopwatch.h
bhuman2ros/src/Tools/MessageQueue/: MessageIDs.h  MessageQueueBase.cpp
bhuman2ros/src/Tools/ProcessFramework/: Process.cpp  Process.h
bhuman2ros/src/Tools/Streams/: InStreams.h  StreamHandler.h
bhuman_modules/: README.md
bhuman_modules/Config/: backpackSettings.cfg
bhuman_modules/Config/Locations/Backpack/: lowerCameraSettings.cfg  modules.cfg  upperCameraSettings.cfg
bhuman_modules/Config/Robots/Default/: massCalibrationH25V5Backpack.cfg
bhuman_modules/Src/Modules/Infrastructure/: CognitionBackpackComm.cpp  CognitionBackpackComm.h  MotionBackpackComm.cpp  MotionBackpackComm.h
bhuman_modules/Src/Representations/Infrastructure/: BackpackData.h
config_scripts/: README.md  hotspot.sh  start_vnc.sh
install/: README.md  backpack_installer.sh  nao_install.rosinstall
install_scripts/: README.md  backpack_installer.sh  odroid_dependencies.sh
nao_description/: backpack_installer.sh  nao_install.rosinstall
nao_description/install/: nao_install.rosinstall  nao_installer.sh
scripts/: README.md  set_nao_network.sh  set_ros_master.sh
