<?xml version="2.0"?>
<package>
  <name>bhuman2ros</name>
  <version>0.0.0</version>
  <description>An interface between the B-Human framework and the ROS middleware</description>

  <maintainer email="mmattamala@ing.uchile.cl">Matias Mattamala</maintainer>
  <author email="mmattamala@ing.uchile.cl">Matias Mattamala</author>

  <!-- License -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
